--- a/app/styles/modules/modals.less
+++ b/app/styles/modules/modals.less
@@ -18,6 +18,7 @@
             position: absolute;
             right: 0%;
             border-bottom: 0px;
+            z-index: 9;
         }
         .modal-body {
             margin-top: 10px;
